--- a/recipes/mac_and_cheese.html
+++ b/recipes/mac_and_cheese.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+li {
+    font-style: oblique;
+    font-weight: bold;
+    font-family: 'times new roman';
+}
+
+    </style>
+    <link rel="stylesheet" href="mac_and_cheese.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,22 +17,22 @@
 </head>
 <body>
 
-    <h1> Macaroni and cheese </h1>
+    <h1 id="title"> Macaroni and cheese </h1>
 
-<img src="https://www.allrecipes.com/thmb/YrWDMIAOSx0o7xgfpLLNns8I9lk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Homemade-Mac-and-Cheese-ffae3fa24a534094bdbccb7038ba4e81.jpg" alt="Macaroni and cheese dish">
+<img src ="https://www.allrecipes.com/thmb/YrWDMIAOSx0o7xgfpLLNns8I9lk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Homemade-Mac-and-Cheese-ffae3fa24a534094bdbccb7038ba4e81.jpg" alt="Macaroni and cheese dish" class="image">
 
-<h2>Description</h2>
+<h2>Mac and cheese recipe with a buttered bread crumb topping</h2>
     <p> This mac and cheese recipe with a buttered bread crumb topping is creamy and comforting. It's easy to make the cheese sauce from scratch on your stovetop, 
-        starting with a roux and adding milk, Cheddar, and Parmesan, resulting in a rich, decadent sauce that coats every nook and cranny of the noodles. 
+        starting with a roux and adding milk, Cheddar, and Parmesan, resulting in a <em> rich </em>, decadent sauce that coats every nook and cranny of the noodles. 
         Serve this comfort-food macaroni and cheese casserole with grilled meats, sloppy Joes, fried chicken or alongside a salad for a meatless dinner.</p>
     
-<h3>Ingredients</h3>
+<h3 style="color: brown; font-family: 'times new roman'; text-decoration: underline;">Ingredients</h3>
     <ul>
         <li>Macaroni- 8 ounces uncooked elbow macaroni</li>
         <li>Butter- ¼ cup salted butter</li>
         <li>Flour- 3 tablespoons all-purpose flour</li>
         <li>Milk- 2 ½ cups milk, or more as needed</li>
-        <li>Cheese- 2 cups shredded sharp Cheddar cheese & ½ cup finely grated Parmesan cheese</li>
+        <li >Cheese- 2 cups shredded sharp Cheddar cheese & ½ cup finely grated Parmesan cheese</li>
         <li>Seasoning- salt and ground black pepper to taste (Optional)</li>
         <li>Bread Crumbs- 2 tablespoons salted butter, ½ cup dry bread crumbs, 1 pinch ground paprika</li>
 
